--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,22 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+head
+  title Books
+  link(href='/stylesheets/style.css' rel='stylesheet')
+h1 Books
+p
+  a.button(href='new_book.html') Create New Book
+table
+  thead
+    tr
+      th Title
+      th Author
+      th Genre
+      th Year
+  tbody
+    each book in allBooks
+      tr
+        td
+          a(href='book_detail.html') #{ book.title }
+        td #{ book.author }
+        td #{ book.genre }
+        td #{ book.year }
