--- a/views/error.pug
+++ b/views/error.pug
@@ -1,6 +1,6 @@
 doctype html
 head
   title Page Not Found
-  link(rel='stylesheet' href='../public/stylesheets/style.css')
+  link(rel='stylesheet' href='/stylesheets/style.css')
 h1 Server Error
 p Sorry! There was an unexpected error on the server.
