--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,8 @@ head
   link(href='/stylesheets/style.css' rel='stylesheet')
 h1 Books
 p
-  a.button(href='new_book.html') Create New Book
+  //- a.button(href='books/new') Create New Book
+  a.button(href='books/new') Create New Book
 table
   thead
     tr
