--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -1,7 +1,7 @@
 doctype html
 head
   title New Book
-  link(href='/stylesheets/style.css' rel='stylesheet')
+  link(rel='stylesheet' href='/stylesheets/style.css')
 h1 New Book
 form
   p
@@ -19,4 +19,4 @@ form
   p
     input(type='submit' value='Create New Book')
   p
-    a.button(href='all_books.html') Cancel
+    a.button(href='/books') Cancel
