--- a/views/form-error.pug
+++ b/views/form-error.pug
@@ -3,7 +3,11 @@ head
   title New Book
   link(rel='stylesheet' href='/stylesheets/style.css')
 h1 New Book
-form(action='/books/new' method='post')
+form
+  h2.error Oooops!
+  ul.error
+    li Title is required
+    li Author is required
   p
     label(for='title') Title
     input#title(name='title' type='text')
@@ -19,4 +23,4 @@ form(action='/books/new' method='post')
   p
     input(type='submit' value='Create New Book')
   p
-    a.button(href='/books') Cancel
+    a.button(href='all_books.html') Cancel
