--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,6 @@ head
   link(href='/stylesheets/style.css' rel='stylesheet')
 h1 Books
 p
-  //- a.button(href='books/new') Create New Book
   a.button(href='books/new') Create New Book
 table
   thead
@@ -17,7 +16,7 @@ table
     each book in allBooks
       tr
         td
-          a(href='book_detail.html') #{ book.title }
+          a(href=`/books/${ book.id }`) #{ book.title }
         td #{ book.author }
         td #{ book.genre }
         td #{ book.year }
