--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,21 +2,5 @@ doctype html
 head
   title Books
   link(href='/stylesheets/style.css' rel='stylesheet')
-h1 Books
-p
-  a.button(href='books/new') Create New Book
-table
-  thead
-    tr
-      th Title
-      th Author
-      th Genre
-      th Year
-  tbody
-    each book in allBooks
-      tr
-        td
-          a(href=`/books/${ book.id }`) #{ book.title }
-        td #{ book.author }
-        td #{ book.genre }
-        td #{ book.year }
+body
+  block content
