--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -6,7 +6,7 @@ block content
   form(action=`/books/${book.id}` method='post')
 
     if errors
-      ul
+      ul.error
         each error in errors
           li #{ error.message }
 
