--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,6 +1,9 @@
 doctype html
 head
-  title Books
   link(href='/stylesheets/style.css' rel='stylesheet')
-body
-  block content
+  
+  block head
+    title #{title}
+    
+  body
+    block content
